src/main/java/com/example/edulightbe/errors/ValidationError.java
package com.example.edulightbe.errors;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class ValidationError {
    private String field;
    private Object value;
    private String message;
}
